adding 1-hop property search

--- a/src/main/java/code/dws/message/messages.properties
+++ b/src/main/java/code/dws/message/messages.properties
@@ -42,7 +42,7 @@ DBPEDIA_PREDICATES_FILE_PATH=/home/arnab/Work/data/DBPedia/DBPEDIA_PREDS.txt
 DRIVER_NAME=com.mysql.jdbc.Driver
 #org.postgresql.Driver
 #com.mysql.jdbc.Driver
-CONNECTION_URL=jdbc:mysql://127.0.0.1/
+CONNECTION_URL=jdbc\:mysql\://134.155.86.39 /
 #134.155.86.39
 #jdbc:mysql://127.0.0.1/
 #jdbc:postgresql://127.0.0.1:5432/
